--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-
 	<types>
-		<members>Contact_Emit_AddPerson_Valitive_Event_OnUpsert</members>
-		<name>Flow</name>
+		<members>Test_ValitiveMonitoringEventTrigger</members>
+		<members>ValitiveEventProcessor</members>
+		<name>ApexClass</name>
 	</types>
 	<version>60.0</version>
 </Package>
