--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
-		<members>Test_ValitiveMonitoringEventTrigger</members>
-		<members>ValitiveEventProcessor</members>
+		<members>ContactValitiveEventSyncBatch</members>
+		<members>Test_ContactValitiveEventSyncBatch</members>
+		<members>ValitiveClientMock</members>
+		<members>ValitiveEventResponse</members>
 		<name>ApexClass</name>
 	</types>
 	<version>60.0</version>
