--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
-		<members>ValitiveQuerySubjectsBatch</members>
+		<members>ContactValitiveEventMapping</members>
+		<members>SyncContactValitiveStateBatch</members>
+		<members>Test_SyncContactValitiveState</members>
+		<members>Test_ValitiveMonitoringEventTrigger</members>
+		<members>ValitiveEventProcessor</members>
+		<members>ValitiveClientMock</members>
 		<name>ApexClass</name>
 	</types>
 	<version>60.0</version>
