--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,6 @@
     "**/.settings": true,
     "**/.exchange_modules_tmp": true,
     ".mule": true
-  }
+  },
+  "xml.preferences.showSchemaDocumentationType": "none"
 }
